traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:15: error: Missing closing brace `}' assumed here
}
^